--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.28.0
 pandas>=2.0.0
 google-api-python-client>=2.100.0
+youtube-transcript-api>=0.6.1
 gspread>=5.12.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 isodate>=0.6.1
-requests>=2.25.0
